# advent-of-code-2025

./: .gitignore  README.md
day_01/app/: Main.hs
day_02/app/: Main.hs
day_03/app/: Main.hs
day_04/: template.cabal
day_04/app/: Main.hs
day_05/: template.cabal
day_05/app/: Main.hs
day_06/app/: Main.hs
day_07/app/: Main.hs
day_08/app/: Main.hs
day_08_golang/: go.mod  main.go
day_09/: README.md
day_09/app/: Main.hs
day_10/app/: Main.hs
day_10_golang/: go.mod  main.go
day_11/: main.go
day_11_golang/: go.mod
template/: template.cabal
template/app/: Main.hs
