cabal-version:      3.0
name:               template
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
-- license-file:       LICENSE
author:             mjarkk
maintainer:         mkopenga@gmail.com
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable template
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.2.0
    hs-source-dirs:   app
    default-language: GHC2024
